<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/honda_k_line_diagnostic"
        android:textColor="#fff"
        android:textStyle="bold"
        android:textSize="20sp"
        android:layout_margin="16dp"
        />

    <TextView
        android:id="@+id/ftdi_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/title_view"
        android:layout_margin="8dp"
        android:text="@string/no_connection"
        android:textColor="#fff"
        android:textSize="16sp"
        />

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ftdi_status"
        android:rowCount="3"
        android:columnCount="2"
        android:layout_marginVertical="10dp"
        android:layout_marginHorizontal="20dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            app:cardElevation="0dp"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center_horizontal"
                android:background="@drawable/border"
                >

                <TextView
                    android:id="@+id/rpm_num"
                    android:layout_width="97dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:text="0"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/text_rpm"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="0"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            app:cardElevation="0dp"
            android:background="#00000000"
            android:backgroundTint="#00000000"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/border"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/tps_num"
                    android:layout_width="97dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="0.0"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/text_tps"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            app:cardElevation="0dp"
            android:background="#00000000"
            android:backgroundTint="#00000000"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/border"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/afr_num"
                    android:layout_width="97dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="0.0"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/text_afr"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            app:cardElevation="0dp"
            android:background="#00000000"
            android:backgroundTint="#00000000"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/border"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/inj_num"
                    android:layout_width="97dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:text="0.000"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/text_inj"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            app:cardElevation="0dp"
            android:background="#00000000"
            android:backgroundTint="#00000000"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp"
                android:background="@drawable/border"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/ign_num"
                    android:layout_width="97dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:textColor="@color/white"
                    android:text="0.0"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/text_ign"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_row="2"
            android:layout_column="1"
            android:layout_gravity="fill"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_margin="16dp"
            android:background="#00000000"
            app:cardElevation="0dp"
            android:backgroundTint="#00000000"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/border"
                android:padding="16dp"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/eot_num"
                    android:layout_width="97dp"
                    android:layout_height="33dp"
                    android:layout_weight="1"
                    android:text="0.0"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:textSize="24sp"
                    android:textStyle="bold" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:text="@string/text_eot"
                    android:textSize="16sp"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>


    </GridLayout>



</RelativeLayout>